[package]
name = "m-helper"
version = "0.0.1"
edition = "2021"

description = "helper for mippo"
license = "MIT OR Apache-2.0"

repository = "https://github.com/mippo-app/helper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "1"
walkdir = "2"